Rename css of form__select, form__badge, btn-outline-small, cursor-pointer

--- a/products.html
+++ b/products.html
@@ -9000,7 +9000,7 @@
                                                     <div class="_ekor09">
                                                       <button
                                                         type="button"
-                                                        class="btn-outline--small"
+                                                        class="btn-outline-small"
                                                       >
                                                         <div class="flex-items-center">
                                                           <svg
