--- a/submission/expertise.html
+++ b/submission/expertise.html
@@ -1213,7 +1213,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
