--- a/submission/photo.html
+++ b/submission/photo.html
@@ -1037,7 +1037,7 @@
                       </div>
                       <div class="_g7lz6c">Photos</div>
                       <div class="_ls0e43">
-                        <button type="button" class="btn-outline--small">Preview</button>
+                        <button type="button" class="btn-outline-small">Preview</button>
                       </div>
                     </div>
                     <section class="_92ham2">
@@ -1815,7 +1815,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
