--- a/calendar_week.html
+++ b/calendar_week.html
@@ -190,7 +190,7 @@
                             <button
                               aria-label="Today, 9 July 2022, Saturday"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                               disabled=""
                             >
                               Today
@@ -623,7 +623,7 @@
                               <div>
                                 <div>
                                   <div>
-                                    <button type="button" class="btn-outline--small">
+                                    <button type="button" class="btn-outline-small">
                                       <span class="_14d5b3i"
                                         ><span class="box-border">Actions</span
                                         ><span class="_9y3psr"
