--- a/resources.html
+++ b/resources.html
@@ -168,7 +168,7 @@
                               aria-expanded="false"
                               aria-haspopup="true"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               <div class="_j1kt73">Menu</div>
                             </button>
