--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -1459,7 +1459,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
