--- a/submission/basic.html
+++ b/submission/basic.html
@@ -1316,7 +1316,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
