--- a/submission/bring.html
+++ b/submission/bring.html
@@ -1250,7 +1250,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
