--- a/submission/cancel.html
+++ b/submission/cancel.html
@@ -1154,7 +1154,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
