--- a/submission/participation.html
+++ b/submission/participation.html
@@ -1149,7 +1149,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
