--- a/submission/tq.html
+++ b/submission/tq.html
@@ -1147,7 +1147,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
