--- a/submission/video.html
+++ b/submission/video.html
@@ -1263,7 +1263,7 @@
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
