--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -1037,7 +1037,7 @@
                       </div>
                       <div class="_g7lz6c">What we’ll do</div>
                       <div class="_ls0e43">
-                        <button type="button" class="btn-outline--small">Preview</button>
+                        <button type="button" class="btn-outline-small">Preview</button>
                       </div>
                     </div>
                     <section class="_92ham2">
@@ -1446,7 +1446,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                             <button
                               id="lyt-back-button"
                               type="button"
-                              class="btn-outline--small"
+                              class="btn-outline-small"
                             >
                               Back
                             </button>
