--- a/transaction_history.html
+++ b/transaction_history.html
@@ -476,7 +476,7 @@
                                             <div class="dir dir-ltr">
                                               <a
                                                 href="/account-settings/payments/payout-methods/new"
-                                                class="btn-outline--small"
+                                                class="btn-outline-small"
                                                 >Get started</a
                                               >
                                             </div>
