rename breadcrumb, inline-block

--- a/contact-host.html
+++ b/contact-host.html
@@ -817,7 +817,7 @@
                                                   </button>
                                                 </div>
                                               </div>
-                                              <div class="_36rlri">
+                                              <div class="inline-block">
                                                 <a
                                                   href="/s/experiences/online"
                                                   class="link"
