--- a/merchandising.html
+++ b/merchandising.html
@@ -4426,7 +4426,7 @@
                                                               </button>
                                                             </div>
                                                           </div>
-                                                          <div class="_36rlri">
+                                                          <div class="inline-block">
                                                             <a
                                                               href="/s/experiences/online"
                                                               class="link"
