--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -904,8 +904,8 @@
                                   style="margin-top: 40px; margin-bottom: 40px"
                                 >
                                   <nav aria-label="Account">
-                                    <ol class="_1ckj08w">
-                                      <li class="_36rlri">
+                                    <ol class="breadcrumb">
+                                      <li class="inline-block">
                                         <span class="_121z06r2"
                                           ><a
                                             href="/account-settings"
@@ -915,9 +915,9 @@
                                           ></span
                                         >
                                       </li>
-                                      <li class="_36rlri">
+                                      <li class="inline-block">
                                         <div
-                                          class="_36rlri"
+                                          class="inline-block"
                                           style="
                                             margin-left: 16px;
                                             margin-right: 16px;
