--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -624,8 +624,8 @@
                                     "
                                   >
                                     <nav aria-label="Account">
-                                      <ol class="_1ckj08w">
-                                        <li class="_36rlri">
+                                      <ol class="breadcrumb">
+                                        <li class="inline-block">
                                           <span class="_121z06r2"
                                             ><a
                                               href="/account-settings"
@@ -635,9 +635,9 @@
                                             ></span
                                           >
                                         </li>
-                                        <li class="_36rlri">
+                                        <li class="inline-block">
                                           <div
-                                            class="_36rlri"
+                                            class="inline-block"
                                             style="
                                               margin-left: 16px;
                                               margin-right: 16px;
