Rename header-search date-options

--- a/explore-when.html
+++ b/explore-when.html
@@ -2938,10 +2938,10 @@
                                                                     >
                                                                   </div>
                                                                   <div
-                                                                    class="_4h7qxrh"
+                                                                    class="header-search__date-options-wrapper"
                                                                   >
                                                                     <div
-                                                                      class="_o1ze55"
+                                                                      class="header-search__date-option-exact-dates"
                                                                     >
                                                                       <button
                                                                         aria-label="Exact dates"
