rename card-long, relative, fade-in, btn-save, card, explore-card

--- a/help.html
+++ b/help.html
@@ -88,7 +88,7 @@
                               aria-label="Choose a language and currency"
                               data-testid="locale-trigger"
                               type="button"
-                              class="btn-wishlist"
+                              class="btn-save"
                             >
                               <span class="_e296pg"
                                 ><div
