--- a/products.html
+++ b/products.html
@@ -13777,7 +13777,7 @@
                                                           <button
                                                             aria-label="Open the keyboard shortcuts panel"
                                                             type="button"
-                                                            class="btn-wishlist"
+                                                            class="btn-save"
                                                           >
                                                             <span
                                                               class="_e296pg"
@@ -16288,7 +16288,7 @@
                                                           <button
                                                             aria-label="Open the keyboard shortcuts panel"
                                                             type="button"
-                                                            class="btn-wishlist"
+                                                            class="btn-save"
                                                           >
                                                             <span
                                                               class="_e296pg"
