--- a/submission/discounts.html
+++ b/submission/discounts.html
@@ -1227,7 +1227,7 @@
                                     </div>
                                   </div>
                                   <div class="_btnasc">
-                                    <button type="button" class="btn-wishlist">
+                                    <button type="button" class="btn-save">
                                       <span class="_e296pg"
                                         ><svg
                                           viewBox="0 0 24 24"
