rename featured-card -> card-alt-2

--- a/login-security.html
+++ b/login-security.html
@@ -559,7 +559,7 @@
                                               </div>
                                             </div>
                                             <div style="margin-top: 8px">
-                                              <div class="featured-card__text">
+                                              <div class="card-alt-2__text">
                                                 <div class="_ylytgbo">
                                                   Not connected
                                                 </div>
@@ -604,7 +604,7 @@
                                               </div>
                                             </div>
                                             <div style="margin-top: 8px">
-                                              <div class="featured-card__text">
+                                              <div class="card-alt-2__text">
                                                 <div class="_ylytgbo">
                                                   Not connected
                                                 </div>
@@ -688,7 +688,7 @@
                                                   </div>
                                                 </div>
                                                 <div style="margin-top: 8px">
-                                                  <div class="featured-card__text">
+                                                  <div class="card-alt-2__text">
                                                     <span class="_czm8crp"
                                                       >August 16, 2022 at
                                                       15:21</span
@@ -751,7 +751,7 @@
                                                   </div>
                                                 </div>
                                                 <div style="margin-top: 8px">
-                                                  <div class="featured-card__text">
+                                                  <div class="card-alt-2__text">
                                                     <span class="_czm8crp"
                                                       >August 4, 2022 at
                                                       18:19</span
@@ -814,7 +814,7 @@
                                                   </div>
                                                 </div>
                                                 <div style="margin-top: 8px">
-                                                  <div class="featured-card__text">
+                                                  <div class="card-alt-2__text">
                                                     <span class="_czm8crp"
                                                       >Bacoor, Calabarzon · </span
                                                     ><span class="_czm8crp"
@@ -879,7 +879,7 @@
                                                   </div>
                                                 </div>
                                                 <div style="margin-top: 8px">
-                                                  <div class="featured-card__text">
+                                                  <div class="card-alt-2__text">
                                                     <span class="_czm8crp"
                                                       >Makati City, Metro Manila
                                                       · </span
@@ -945,7 +945,7 @@
                                                   </div>
                                                 </div>
                                                 <div style="margin-top: 8px">
-                                                  <div class="featured-card__text">
+                                                  <div class="card-alt-2__text">
                                                     <span class="_czm8crp"
                                                       >Makati City, Metro Manila
                                                       · </span
@@ -1708,7 +1708,7 @@
                                                 </div>
                                               </div>
                                               <div style="margin-top: 8px">
-                                                <div class="featured-card__text">
+                                                <div class="card-alt-2__text">
                                                   <div class="_ylytgbo">
                                                     Not connected
                                                   </div>
@@ -1753,7 +1753,7 @@
                                                 </div>
                                               </div>
                                               <div style="margin-top: 8px">
-                                                <div class="featured-card__text">
+                                                <div class="card-alt-2__text">
                                                   <div class="_ylytgbo">
                                                     Not connected
                                                   </div>
@@ -1841,7 +1841,7 @@
                                                     </div>
                                                   </div>
                                                   <div style="margin-top: 8px">
-                                                    <div class="featured-card__text">
+                                                    <div class="card-alt-2__text">
                                                       <span class="_czm8crp"
                                                         >August 16, 2022 at
                                                         15:21</span
@@ -1906,7 +1906,7 @@
                                                     </div>
                                                   </div>
                                                   <div style="margin-top: 8px">
-                                                    <div class="featured-card__text">
+                                                    <div class="card-alt-2__text">
                                                       <span class="_czm8crp"
                                                         >August 4, 2022 at
                                                         18:19</span
@@ -1971,7 +1971,7 @@
                                                     </div>
                                                   </div>
                                                   <div style="margin-top: 8px">
-                                                    <div class="featured-card__text">
+                                                    <div class="card-alt-2__text">
                                                       <span class="_czm8crp"
                                                         >Bacoor, Calabarzon · </span
                                                       ><span class="_czm8crp"
@@ -2038,7 +2038,7 @@
                                                     </div>
                                                   </div>
                                                   <div style="margin-top: 8px">
-                                                    <div class="featured-card__text">
+                                                    <div class="card-alt-2__text">
                                                       <span class="_czm8crp"
                                                         >Makati City, Metro
                                                         Manila · </span
@@ -2106,7 +2106,7 @@
                                                     </div>
                                                   </div>
                                                   <div style="margin-top: 8px">
-                                                    <div class="featured-card__text">
+                                                    <div class="card-alt-2__text">
                                                       <span class="_czm8crp"
                                                         >Makati City, Metro
                                                         Manila · </span
