--- a/submission/GuestP.html
+++ b/submission/GuestP.html
@@ -2331,7 +2331,7 @@
                                     style="top: 59.8364px; left: 102px"
                                   >
                                     <div class="_hzrmny">
-                                      <div class="featured-card__text">₹98.40</div>
+                                      <div class="card-alt-2__text">₹98.40</div>
                                       <div class="_vgark8"></div>
                                     </div>
                                   </div>
